# CPP_notes

./: .gitignore  Has_ptr.cpp  Has_ptr.h  Makefile  Message.cpp  Message.h  MyString.cpp  MyString.h  Query.cpp  Query.h  Sales_data.cpp  Sales_data.h  StrVec.cpp  StrVec.h  Str_blob.cpp  Str_blob.h  Text_query.cpp  Text_query.h  binary_features.cpp  chapter11.cpp  chapter12.cpp  chapter13.cpp  chapter14.cpp  chapter15.cpp  chapter16.cpp  chapter18.cpp  chapter19.cpp  chapter3.cpp  chapter4.cpp  chapter6.cpp  chapter8.cpp  ctr_gen.cpp  custom_iterator.cpp  exercises.h  explicit.cpp  explicit_test.cpp  lambdas.cpp  main.cpp  makefile  misc_tests.cpp  (+1 more)
cmake_tutorial/: CMakeCache.txt  CMakeLists.txt  Makefile  TutorialConfig.hpp  cmake_install.cmake  tutorial.cpp
cmake_tutorial/MathFunctions/: CMakeLists.txt  Makefile  cmake_install.cmake  mysqrt.cpp
lessons/: 10_algorithms.cpp  11_assoc_containers.cpp  13_copy_control.cpp  15_OOP.cpp  19_misc.cpp  8_iostreams.cpp  9_serial_containers.cpp  Has_ptr.h  Message.h  MyString.cpp  Sales_data.h  namespace.h  trans.txt  type_conversions.cpp
linkage/: a.cpp  b.cpp  common.hpp
move_forward/: reference_collapsing.cpp  uni_ref.cpp  uni_ref_overload.cpp  wrong_deduce.cpp
patterns/: curiously_recurring_tamplate.cpp  pimpl.cpp  pimpl.hpp  singleton.cpp
patterns/behavioral/: chain_of_responsibility.cpp  command.cpp  iterator.cpp  mediator.cpp  observer.cpp
patterns/generative/: abstract_factory.cpp  builder.cpp  factory.cpp  prototype.cpp  singleton.cpp
patterns/structural/: adapter.cpp  bridge.cpp  composite.cpp  decorator.cpp  facade.cpp  flyweight.cpp  proxy.cpp
smart_pointers/: oop.cpp  shared_from_this.cpp  shared_ptr.cpp  tests.cpp  unique_ptr.cpp  usage.cpp  valout.txt
src/: 13_copy_control.cpp  18_multi_inheritance.cpp  5_operators.cpp  MyString.h  Query.cpp  Query.h  Sales_data.cpp  Sales_data.h  StrVec.h  Str_blob.cpp  Str_blob.h  chapter10.cpp  chapter15.cpp  chapter3.cpp  chapter4.cpp  chapter7.cpp  exercises.h  main.cpp  rules.txt  threads_and_tasks.cpp  valgrind-out.txt
templates/: a.cpp  b.cpp  decltype.cpp  spec_tmpl.hpp  specializations.cpp  types_deduction.cpp
templates/policy_classes/: 1_basics.cpp  1_creator.cpp  1_creator.hpp
